# microsoft-apis-rs

./: Cargo.toml
microsoft-cognitive-computer-vision/: Cargo.toml  README.md
microsoft-cognitive-computer-vision/demo/: Cargo.toml
microsoft-cognitive-computer-vision/demo/src/: detect_objects.rs
microsoft-cognitive-computer-vision/src/: endpoint_url.rs  lib.rs
microsoft-cognitive-computer-vision/src/data_types/: image_input.rs  metadata.rs  mod.rs  model_version.rs  model_version_input.rs  object.rs  request_id.rs
microsoft-cognitive-computer-vision/src/operations/: common.rs  detect_objects.rs  mod.rs
microsoft-cognitive-computer-vision/tests/response_body_files/: README.md  detect_objects_err__400.json  detect_objects_err__401.json  detect_objects_ok.json  detect_objects_ok_with_empty.json
